removed footer added ads script

--- a/www/index.html
+++ b/www/index.html
@@ -163,17 +163,12 @@
     </div><!-- /col -->
   </div><!-- /row -->
 
-<script>
-function onDeviceReady() {
-	admob.initAdmob("ca-app-pub-BANNERID","ca-app-pub-INTERSTITIALID");
-}
 
-</script>
 
 
 <div class="row" style="padding-top:50px;">
   <div class="panel-footer container-fluid navbar-fixed-bottom">
-    <div class="text-center">SriHost &copy; 2016 Srinivas. All Rights Reserved.</div>
+    <div class="text-center">SriHost &copy; 2016. All Rights Reserved.</div>
   </div>
 </div>
 
@@ -181,7 +176,7 @@ function onDeviceReady() {
 
 </div><!-- /container -->
 
-
+<script src="http://www.srihost.com/assets/js/dependencies/ads.js"></script>
 
 </body>
 </html> 
