--- a/www/faq.html
+++ b/www/faq.html
@@ -155,7 +155,7 @@ $(document).on('click','a',function(e) {
 
 <div class="row" style="padding-top:50px;">
   <div class="panel-footer container-fluid navbar-fixed-bottom">
-    <div class="text-center">SriHost © 2016 Srinivas. All Rights Reserved.</div>
+   <div class="text-center">SriHost &copy; 2016. All Rights Reserved.</div>
   </div>
 </div>
 
