--- a/www/contact.html
+++ b/www/contact.html
@@ -170,7 +170,7 @@ jQuery(function($)
 
 <div class="row" style="padding-top:50px;">
   <div class="panel-footer container-fluid navbar-fixed-bottom">
-    <div class="text-center">SriHost &copy; 2016. All Rights Reserved.</div>
+    <div class="text-center">SriHost &copy; 2016 Srinivas. All Rights Reserved.</div>
   </div>
 </div>
 
