--- a/www/index.html
+++ b/www/index.html
@@ -4,17 +4,13 @@
       <title>SriHost:Torrents Searcher</title>
  <link rel="stylesheet" href="assets/styles/bootstrap.css">
  <link rel="stylesheet" href="assets/styles/style.css">
- <link rel="stylesheet" href="assets/styles/easy-autocomplete.css">
- <link rel="stylesheet" href="assets/styles/easy-autocomplete.themes.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta property="og:image" content="/assets/images/loading.gif" />
-
 <!--SCRIPTS-->
 <script src="assets/js/dependencies/jquery-2.1.1.js"></script>
 <script src="assets/js/dependencies/bootstrap.js"></script>
-<script src="assets/js/dependencies/index.js"></script>
-<script src="assets/js/dependencies/jquery.easy-autocomplete.js"></script>
 <script src="assets/js/dependencies/main.js"></script>
+
 
 <script src="cordova.js"></script>
 
@@ -163,12 +159,17 @@
     </div><!-- /col -->
   </div><!-- /row -->
 
+<script>
+function onDeviceReady() {
+	admob.initAdmob("ca-app-pub-BANNERID","ca-app-pub-INTERSTITIALID");
+}
 
+</script>
 
 
 <div class="row" style="padding-top:50px;">
   <div class="panel-footer container-fluid navbar-fixed-bottom">
-    <div class="text-center">SriHost &copy; 2016. All Rights Reserved.</div>
+    <div class="text-center">SriHost &copy; 2016 Srinivas. All Rights Reserved.</div>
   </div>
 </div>
 
@@ -176,7 +177,7 @@
 
 </div><!-- /container -->
 
-<script src="http://www.srihost.com/assets/js/dependencies/ads.js"></script>
+
 
 </body>
 </html> 
